fix(single post): restyle on mobile

--- a/assets/sass/_displays-override.scss
+++ b/assets/sass/_displays-override.scss
@@ -19,6 +19,14 @@
 ::selection {
 	background: $color-secondary-2-2;
 }
+
+pre {
+  font-size: 0.8rem;
+  padding: 0;
+}
+code, kbd, tt, var {
+    font-size: 0.8rem;
+}
 body {
 	background-color: transparent;
 }
@@ -59,10 +67,6 @@ a:link:visited,
   &:active {
     color: $color-secondary-1-4-hover;
   }
-}
-
-.post-navigation a {
-	@extend %button;
 }
 
 .site-footer .site-info a:hover,
@@ -551,6 +555,70 @@ a:link:visited,
 .site-footer {
   .site-info {
     padding: 20px 40px;
+  }
+}
+//POST SINGLE
+.single-post {
+  .post-inner {
+    .entry-title {
+      margin: 0 0 2rem 0;
+      text-align: center;
+    }
+    .entry-media {
+      text-align: center;
+      margin: 0 0 2rem 0;
+      img{
+        max-width: 10rem;
+        margin: auto;
+      }
+    }
+    .entry-excerpt {
+      font-size: 1.2rem;
+      margin: 0 0 2rem 0;
+      padding: 0 0 2rem 0;
+      border-bottom: 1px solid white;
+      text-align: center;
+    }
+    .post-bottom {
+      color: $color-text;
+      border-color: white;
+      margin: 2rem 0 0 0;
+      padding: 2rem 0;
+    }
+  }
+  .container .page-detail {
+    padding-bottom: 0;
+  }
+}
+.posts-navigation,
+.post-navigation {
+  background-color: $color-primary-2;
+  margin: 0 -40px;
+  padding: 1rem;
+  a {
+  	@extend %nav-link;
+  }
+  .nav-previous {
+    width: 50%;
+    margin: 0;
+    a {
+      margin: 0 0 0 1.4rem;
+      &:before {
+        content: "\f3d5";
+      }
+    }
+  }
+  .nav-next {
+    width: 50%;
+    text-align: end;
+    margin: 0;
+    a {
+      margin: 0 1.4rem 0 0;
+      &:before {
+        left: auto;
+        right: -1.4rem;
+      }
+    }
   }
 }
 
